--- a/invision-app/app/components/movieCard/movieCard.scss
+++ b/invision-app/app/components/movieCard/movieCard.scss
@@ -48,4 +48,25 @@
       color: #ffffff;
       cursor: pointer;
     }
+    .circle {
+      position: absolute;
+      right: 10px;
+      top: 20px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: #232323;
+      opacity: 0.8;
+  }
   
+  .circle:after {
+      content: '•••';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(90deg);
+      font-size: 15px;
+      letter-spacing: 2px;
+      margin-top: 2px;
+      color: white;
+  }
