PR comment fixes, edit movie is still pending, will coover task5

--- a/invision-app/app/components/search/search.scss
+++ b/invision-app/app/components/search/search.scss
@@ -22,5 +22,7 @@
       border: solid 1px #000;
       border-radius: 4px;
       box-shadow: 3px 3px 11px 3px #55555590;
+      color: #fff;
+      font-size: 18px;
     }
    
