--- a/invision-app/app/components/sortBy/sortBy.scss
+++ b/invision-app/app/components/sortBy/sortBy.scss
@@ -4,6 +4,7 @@
         display: flex;
         align-items: center;
         max-width: 300px;
+        text-transform: uppercase;
     }
         .sort-header {
           flex-grow: 1;
